--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "lodash": "^4.12.0",
     "oracledb": "^1.9.3",
+    "through2": "^2.0.1",
     "wadofgum": "^5.1.0",
     "wadofgum-keymap": "^0.2.0",
     "wadofgum-process": "^0.2.0",
